...
            android:text="Degree"
            android:textColor="@color/white"
            android:textSize="20sp" />
    </LinearLayout>

    <ImageButton
        android:id="@+id/arButtonId"
        android:background="@drawable/roundedbtn"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:src="@drawable/ar_icon" />
...
